Het is kallr :))))

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <center><h1><b>Otto Plasmeijer<b></h1></center>
-<center><p><i> <a href="url">Profiel</a> | <a href="url">Hobby's</a> | <a href="url">Gaming</a></i> </p></center>
+<center><p><i> <a href="profiel.html">Profiel</a> | <a href="hobbys.html">Hobby's</a> | <a href="gaming.html">Gaming</a> | <a href="badges.html">Badges</a> </i> </p></center>
 <hr color="black">
 <img src="BIBBA.png" alt="foto van mij :)))" style="width:100%;">
 <br>
 <h1 class="profiel">Profiel</h1>
 <p class="info1"><i>Een stukje over mij, en over mijn leven</i></p>
-<button class="button">Bekijken!</button>
+<a href="profiel.html"><button class="button">Bekijken!</button></a>
 
 <h1 class="hobbys">Hobby's</h1>
 <p class="info2"><i>Mijn hobby's, en wat extra info</i></p>
-<button class="button2">Bekijken!</button>
+<a href="hobbys.html"<button class="button2">Bekijken!</button></a>
 
 <h1 class="gaming">Gaming</h1>
 <p class="info3"><i>Mijn grootste passie!</i></p>
